--- a/ready-to-do/normalize.css
+++ b/ready-to-do/normalize.css
@@ -1263,8 +1263,8 @@ img {
 }
 .pkp_site_nav_menu a:hover,
 .pkp_site_nav_menu a:focus {
- color:rgba(0,0,0,0.84);
- text-decoration:underline
+ color:#0a0;
+ /*text-decoration:underline*/
 }
 .pkp_site_nav_menu #siteNav {
  position:absolute;
@@ -3537,78 +3537,6 @@ body[dir="rtl"] .obj_issue_toc .galleys_links li {
   margin-left:2.143rem
  }
 }
-@font-face {
- font-family:'Noto Serif';
- font-style:normal;
- font-weight:400;
- src:url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-regular.eot');
- src:local(''),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-regular.eot?#iefix') format('embedded-opentype'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-regular.woff2') format('woff2'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-regular.woff') format('woff'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-regular.ttf') format('truetype'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-regular.svg#NotoSerif') format('svg')
-}
-@font-face {
- font-family:'Noto Serif';
- font-style:italic;
- font-weight:400;
- src:url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-italic.eot');
- src:local(''),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-italic.eot?#iefix') format('embedded-opentype'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-italic.woff2') format('woff2'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-italic.woff') format('woff'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-italic.ttf') format('truetype'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-italic.svg#NotoSerif') format('svg')
-}
-@font-face {
- font-family:'Noto Serif';
- font-style:normal;
- font-weight:700;
- src:url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-700.eot');
- src:local(''),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-700.eot?#iefix') format('embedded-opentype'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-700.woff2') format('woff2'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-700.woff') format('woff'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-700.ttf') format('truetype'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-700.svg#NotoSerif') format('svg')
-}
-@font-face {
- font-family:'Noto Serif';
- font-style:italic;
- font-weight:700;
- src:url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-700italic.eot');
- src:local(''),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-700italic.eot?#iefix') format('embedded-opentype'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-700italic.woff2') format('woff2'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-700italic.woff') format('woff'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-700italic.ttf') format('truetype'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/default/fonts/noto-serif-v9-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-700italic.svg#NotoSerif') format('svg')
-}
-@font-face {
- font-family:'Montserrat';
- font-style:normal;
- font-weight:400;
- src:url('//revistaideas.ufrrj.br/ojs/plugins/themes/defaultManuscript/fonts/montserrat-v15-vietnamese_latin-ext_latin_cyrillic-ext_cyrillic-regular.eot');
- src:local(''),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/defaultManuscript/fonts/montserrat-v15-vietnamese_latin-ext_latin_cyrillic-ext_cyrillic-regular.eot?#iefix') format('embedded-opentype'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/defaultManuscript/fonts/montserrat-v15-vietnamese_latin-ext_latin_cyrillic-ext_cyrillic-regular.woff2') format('woff2'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/defaultManuscript/fonts/montserrat-v15-vietnamese_latin-ext_latin_cyrillic-ext_cyrillic-regular.woff') format('woff'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/defaultManuscript/fonts/montserrat-v15-vietnamese_latin-ext_latin_cyrillic-ext_cyrillic-regular.ttf') format('truetype'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/defaultManuscript/fonts/montserrat-v15-vietnamese_latin-ext_latin_cyrillic-ext_cyrillic-regular.svg#Montserrat') format('svg')
-}
-@font-face {
- font-family:'Montserrat';
- font-style:normal;
- font-weight:700;
- src:url('//revistaideas.ufrrj.br/ojs/plugins/themes/defaultManuscript/fonts/montserrat-v15-vietnamese_latin-ext_latin_cyrillic-ext_cyrillic-700.eot');
- src:local(''),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/defaultManuscript/fonts/montserrat-v15-vietnamese_latin-ext_latin_cyrillic-ext_cyrillic-700.eot?#iefix') format('embedded-opentype'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/defaultManuscript/fonts/montserrat-v15-vietnamese_latin-ext_latin_cyrillic-ext_cyrillic-700.woff2') format('woff2'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/defaultManuscript/fonts/montserrat-v15-vietnamese_latin-ext_latin_cyrillic-ext_cyrillic-700.woff') format('woff'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/defaultManuscript/fonts/montserrat-v15-vietnamese_latin-ext_latin_cyrillic-ext_cyrillic-700.ttf') format('truetype'),
- url('//revistaideas.ufrrj.br/ojs/plugins/themes/defaultManuscript/fonts/montserrat-v15-vietnamese_latin-ext_latin_cyrillic-ext_cyrillic-700.svg#Montserrat') format('svg')
-}
 html,
 body {
  background:#ddd
@@ -3996,7 +3924,7 @@ body {
 }
 .obj_issue_toc .heading .pub_id .id a:hover,
 .obj_issue_toc .heading .pub_id .id a:focus {
- color:#6298ae;
+ color:#0a0;
  text-decoration:underline
 }
 .obj_issue_toc>.galleys,
@@ -4066,7 +3994,7 @@ body {
 .obj_article_details .doi a:hover,
 .obj_article_details .orcid a:focus,
 .obj_article_details .doi a:focus {
- color:#4b7d92;
+ color:#0a0;
  text-decoration:underline
 }
 .obj_article_details .orcid a {
@@ -4208,6 +4136,12 @@ body {
     padding: 10px 20px;
     color: #000;
     cursor: pointer;
+}
+.pkp_search_desktop .search_prompt:hover,
+.pkp_search_desktop .search_prompt:focus {
+   outline:0;
+   padding-bottom:8px;
+   border-bottom:2px solid #0a0
 }
 #navigationPrimary>li>a:focus{
         padding-bottom:6px;
