--- a/ready-to-do/normalize.css
+++ b/ready-to-do/normalize.css
@@ -1263,7 +1263,7 @@ img {
 }
 .pkp_site_nav_menu a:hover,
 .pkp_site_nav_menu a:focus {
- color:#0a0;
+ color:#222;
  /*text-decoration:underline*/
 }
 .pkp_site_nav_menu #siteNav {
