--- a/ready-to-do/no-error.css
+++ b/ready-to-do/no-error.css
@@ -1,4 +1,4 @@
-/*! folha-de-estilo.css v1.7.2 | mapeamento-de-código v0.3.6 | CC4.0 License | github.com/iKalamaZoo */
+/*! folha-de-estilo.css v1.7.3 | mapeamento-de-código v0.3.6 | CC4.0 License | github.com/iKalamaZoo */
 html {
    line-height:1.15;
    -ms-text-size-adjust:100%;
@@ -1910,7 +1910,7 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
    float:left;
    width:65%
  }
-/*! AJUSA A COR DA LINHA DIVISÓRIA INFERIOR DIREITA DAS NOTÍCIAS EM DESTAQUE NA PÁGINA PRINCIPAL */
+/*! AJUSTA A COR DA LINHA DIVISÓRIA INFERIOR DIREITA DAS NOTÍCIAS EM DESTAQUE NA PÁGINA PRINCIPAL */
 .pkp_page_index .cmp_announcements>.obj_announcement_summary:before {
    content:' ';
    position:absolute;
@@ -3331,7 +3331,7 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
    opacity: 1.0;
    filter: grayscale(0%)
  }
- /*! -- */
+/*! -- */
 .obj_issue_summary .title {
    font-family:"Montserrat",-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen-Sans","Ubuntu","Cantarell","Helvetica Neue",sans-serif;
    font-weight:700;
@@ -4336,8 +4336,8 @@ body[dir="rtl"] .obj_issue_toc .galleys_links li {
    transform: translate(0px, -10px);
    opacity: 1.0
 }
- /*! -- */
- /*! AJUSTA AS PROPRIEDADES DA COR DE FUNDO DOS BOTÕES DE SUBMISSÃO E RÓTULO DE ARTIGOS */
+/*! -- */
+/*! AJUSTA AS PROPRIEDADES DA COR DE FUNDO DOS BOTÕES DE SUBMISSÃO E RÓTULO DE ARTIGOS */
 .obj_article_details .entry_details .item.galleys {
    box-shadow:none;
    background: transparent
@@ -4375,7 +4375,7 @@ body[dir="rtl"] .pkp_navigation_user>li:hover ul {
    right:auto;
    left:0
 }
- /*! ALTERA A COR, A ESPESSURA E O POSICIONAMENTO DA BORDA LATERAL POSICIONADA À DIREITA */
+/*! ALTERA A COR, A ESPESSURA E O POSICIONAMENTO DA BORDA LATERAL POSICIONADA À DIREITA */
 body[dir="rtl"] .pkp_structure_sidebar::before {
    right:auto;
    left:0;
@@ -4445,7 +4445,7 @@ body[dir="rtl"] .pkp_structure_sidebar::before {
    animation-fill-mode: backwards;
  }
    
- /* Fade In */
+/* Fade In */
 .animate.fade {
    animation-name: animate-fade;
    animation-timing-function: ease;
