Otimização da estrutura do código e mapeamento do fluxo de atributos

--- a/ready-to-do/no-error.css
+++ b/ready-to-do/no-error.css
@@ -1001,6 +1001,7 @@ body {
    color:#222;
    background:#ddd
 }
+/*! ALTERA A COR DOS LINKS QUE AINDA NÃO FORAM CLICADOS NA PÁGINA */
 a {
    color:#000
 }
