Padronização do tamanho da fonte dos itens da barra lateral

--- a/ready-to-do/global-control.css
+++ b/ready-to-do/global-control.css
@@ -3311,7 +3311,7 @@ html {
   }
   .pkp_block {
    padding:2.143rem 1.43rem;
-   font-size:1rem;
+   font-size:12px;
    line-height:1.43rem
   }
   .pkp_block .title {
@@ -3370,7 +3370,7 @@ html {
   }
   .block_information a,
   .block_language_toggle a {
-   font-size:.93rem
+   font-size:12px
   }
   .block_subscription .subscription_name {
    margin-bottom:0;
