--- a/ready-to-do/no-error.css
+++ b/ready-to-do/no-error.css
@@ -1,4 +1,4 @@
-/*! folha-de-estilo.css v1.7.4 | mapeamento-de-código v0.3.7 | CC4.0 License | github.com/iKalamaZoo */
+/*! folha-de-estilo.css v1.7.8 | mapeamento-de-código v0.3.9 | CC4.0 License | github.com/iKalamaZoo */
 html {
    line-height:1.15;
    -ms-text-size-adjust:100%;
@@ -2111,6 +2111,7 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
    min-width:28%;
    background:transparent
 }
+/*! ALTERA O TAMANHO DO TEXTO NA BARRA DE BUSCA DA PÁGINA PRINCIPAL */
 .pkp_search_desktop.is_open input[type="text"] {
    width:100%;
    max-width:100%;
@@ -2122,7 +2123,7 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
    padding-right:180px;
    border:none;
    border-bottom:1px solid #ddd;
-   font-size:16px;
+   font-size:14px;
    background:#fff
 }
 .pkp_search_desktop.is_open input[type="text"]:hover,
@@ -2460,11 +2461,12 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
 .pkp_op_register .ui-autocomplete {
  position:absolute !important
 }
+/*! ALTERA O TAMANHO DO TEXTO NO CAMPO DE PESQUISA DA PÁGINA DE BUSCA */
 .page_search .search_input .query {
    width:100%;
    max-width:100%;
    height:calc(2.857rem - 2px);
-   font-size:1.285rem;
+   font-size:14px;
    line-height:calc(2.857rem - 2px)
 }
 .page_search .search_advanced {
