--- a/ready-to-do/normalize.css
+++ b/ready-to-do/normalize.css
@@ -2297,7 +2297,7 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
  width:100%;
  max-width:100%;
  height:calc(2.857rem - 2px);
- font-size:1.285rem;
+ font-size:14px;
  line-height:calc(2.857rem - 2px)
 }
 .page_search .search_advanced {
@@ -4141,6 +4141,20 @@ body {
 .pkp_search_desktop.is_open {
     min-width:28%;
     background:transparent
+}
+.pkp_search_desktop.is_open input[type="text"] {
+   width:100%;
+   max-width:100%;
+   line-height:40px;
+   height:40px;
+   top:0;
+   left:0;
+   padding-left:0.5em;
+   padding-right:180px;
+   border:none;
+   border-bottom:1px solid #ddd;
+   font-size:14px;
+   background:#fff
 }
 .pkp_search_desktop .search_prompt {
     display: inline-block;
