--- a/ready-to-do/no-error.css
+++ b/ready-to-do/no-error.css
@@ -2144,7 +2144,8 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
 /*! ALTERA A COR DA LINHA INFERIOR DA BUSCA QUANDO ELA ESTÁ ATIVA */
 .pkp_search_desktop.is_open .search_prompt:hover,
 .pkp_search_desktop.is_open .search_prompt:focus {
-   border-bottom-color:#ff4040
+   border-bottom: 2px solid #ff4040;
+   padding-bottom: 8px
 }
 .pkp_search_desktop.is_searching input[type="text"] {
     opacity:0.5
@@ -2534,7 +2535,11 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
    padding-left:3.2145rem;
    border-right:1px solid rgba(0,0,0,0.4);
    border-left:none;
-   color: #222
+   color: #222;
+   border-radius: 50px
+}
+.page_search .submit button {
+   transition: 0.5s;
 }
 /*! ALTERA A COR DE FUNDO DA LUPA NA PÁGINA DE BUSCA QUANDO O MOUSE NÃO REPOUSA NO OOBJETO */
 .page_search .submit button:after {
@@ -3932,7 +3937,7 @@ body[dir="rtl"] .obj_issue_toc .galleys_links li {
 .pkp_navigation_primary_row {
    background:#ddd;
    padding-left:2.143rem;
-   padding-right:2.143rem
+   padding-right:0rem
  }
 }
 .pkp_navigation_primary_wrapper {
