--- a/ready-to-do/no-error.css
+++ b/ready-to-do/no-error.css
@@ -1,4 +1,4 @@
-/*! folha-de-estilo.css v1.7.8 | mapeamento-de-código v0.3.9 | CC4.0 License | github.com/iKalamaZoo */
+/*! folha-de-estilo.css v1.8.1 | mapeamento-de-código v0.4.1 | CC4.0 License | github.com/iKalamaZoo */
 html {
    line-height:1.15;
    -ms-text-size-adjust:100%;
@@ -2108,7 +2108,7 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
 }
 /*! ALTERA O TAMANHO DA BARRA DE BUSCA */
 .pkp_search_desktop.is_open {
-   min-width:28%;
+   min-width:30%;
    background:transparent
 }
 /*! ALTERA O TAMANHO DO TEXTO NA BARRA DE BUSCA DA PÁGINA PRINCIPAL */
@@ -4137,18 +4137,21 @@ body[dir="rtl"] .obj_issue_toc .galleys_links li {
    font-weight:700;
    text-transform:uppercase
 }
+/*! ALTERA A COR DA BARRA DE TÍTULO NO VISUALIZADOR DE PDF QUANDO O MOUSE NÃO REPOUSA NO OBJETO */
 .header_view {
    background:#fe473c;
-   color:rgba(0,0,0,0.84)
+   color:#222
 }
+/*! ALTERA A COR DO TÍTULO DO ARTIGO NO VISUALIZADOR DE PDF QUANDO O MOUSE NÃO REPOUSA NO OBJETO */
 .header_view .title {
-   color:rgba(240,240,240)
+   color:#fff
 }
+/*! ALTERA A COR DA BARRA DE TÍTULO NO VISUALIZADOR DE PDF QUANDO O MOUSE REPOUSA NO OBJETO */
 .header_view .title:hover,
 .header_view .title:focus {
    background:#fe473c;
-   color:rgba(240,240,240);
-   text-decoration:underline
+   color:#222;
+   text-decoration:none
 }
 /*! CONFIGURA O ÍCONE QUE INDICA O DOI DO VOLUME NA SEÇÃO EDIÇÕES ANTERIORES */
 /*! .obj_issue_toc .heading .pub_id:before {
